--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 out_folder_path=D:\\Duc\\Project\\Java Ecommerce\\backend
+geo.ip.lib.enabled=false
 
 server.port=8088
 server.servlet.context-path=/api/v1
@@ -8,7 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=icub4ucme
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.show-sql=true
